# sms-verification-code-service

./: Cargo.toml
src/: lib.rs
src/core/: entites.rs  generator.rs  locker.rs  mod.rs  sender.rs  service.rs  store.rs
src/generators/: random_generator.rs
src/lockers/: memory_locker.rs  mod.rs
src/senders/: fake_sender.rs  mod.rs
src/stores/: mod.rs  mongo_store.rs
