[package]
name = "sms-verification-code-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
mongodb = "2.7.0"
rand = "0.8.5"
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["sync"] }
